# amberol

./: Cargo.toml  README.md
src/: application.rs  cover_picture.rs  utils.rs  volume_control.rs  waveform_view.rs  window.rs
src/audio/: cover_cache.rs  player.rs  state.rs
src/gtk/: window.ui
