# SPDX-FileCopyrightText: 2022  Emmanuele Bassi
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "amberol"
authors = ["Emmanuele Bassi <ebassi@gnome.org>"]
version = "0.1.0"
edition = "2018"

[features]
default = [
    "shortcuts",
    "auto_restore_playlist",
    "song_duration",
    "volume_shortcuts",
    "autoplay",
    "last_played_song",
    "better_seek",
    "bigger_cover",
    "cover_per_song",
]
shortcuts = []
auto_restore_playlist = []
song_duration = []
volume_shortcuts = []
autoplay = []
last_played_song = []
better_seek = []
bigger_cover = []
cover_per_song = ["dep:crc32fast"]

[dependencies]
color-thief = "0.2.1"
gdk-pixbuf = { version = "0.20", features = ["v2_42"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["v4_14"] }
lofty = "0.21.0"
log = "0.4"
mpris-server = "0.8"
once_cell = "1.10"
pretty_env_logger = "0.5"
rand = "0.8.5"
regex = "1.3.4"
serde_json = "1.0"
crc32fast = { version = "1.4.2", optional = true }
sha2 = "0.10.2"
fuzzy-matcher = "0.3.7"
async-channel = "2.2.0"
futures = "0.3"

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
ashpd = {version = "0.9.1", features = ["gtk4"]}

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_5"]

[dependencies.gst]
package = "gstreamer"
version = "0.23"

[dependencies.gst-audio]
package = "gstreamer-audio"
version = "0.23"

[dependencies.gst-play]
package = "gstreamer-play"
version = "0.23"
